added nerdcommenter to the correct place

--- a/.gitmodules
+++ b/.gitmodules
@@ -10,3 +10,6 @@
 [submodule "bundle/pydoc"]
 	path = bundle/pydoc
 	url = http://github.com/fs111/pydoc.vim.git
+[submodule "bundle/nerdcommenter"]
+	path = bundle/nerdcommenter
+	url = git://github.com/scrooloose/nerdcommenter.git
