--- a/.gitmodules
+++ b/.gitmodules
@@ -31,3 +31,6 @@
 [submodule "bundle/powerline"]
 	path = bundle/powerline
 	url = git://github.com/Lokaltog/vim-powerline.git
+[submodule "bundle/markdown-preview"]
+	path = bundle/markdown-preview
+	url = git://github.com/nelstrom/vim-markdown-preview.git
