--- a/.gitmodules
+++ b/.gitmodules
@@ -39,4 +39,4 @@
 	url = git://github.com/Rip-Rip/clang_complete.git
 [submodule "bundle/syntastic"]
 	path = bundle/syntastic
-	url = https://github.com/scrooloose/syntastic.git
+	url = git://github.com/scrooloose/syntastic.git
