--- a/.gitmodules
+++ b/.gitmodules
@@ -46,3 +46,6 @@
 [submodule "vim/vim/bundle/splice"]
 	path = vim/vim/bundle/splice
 	url = git://github.com/sjl/splice.vim.git
+[submodule "vim/vim/bundle/ctrlp"]
+	path = vim/vim/bundle/ctrlp
+	url = git://github.com/kien/ctrlp.vim.git
