--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -1,5 +1,5 @@
-set -g default-shell "/usr/bin/zsh"
-set -g default-command "/usr/bin/zsh"
+# set -g default-shell "/usr/bin/zsh"
+# set -g default-command "/usr/bin/zsh"
 set -g prefix C-s
 set -g default-terminal "screen-256color"
 set -g bell-action none
