--- a/.gitmodules
+++ b/.gitmodules
@@ -58,3 +58,6 @@
 [submodule "vim/vim/bundle/repeat"]
 	path = vim/vim/bundle/repeat
 	url = git://github.com/tpope/vim-repeat.git
+[submodule "vim/vim/bundle/git"]
+	path = vim/vim/bundle/git
+	url = git://github.com/tpope/vim-git.git
