TMUX: Addds last window binding

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -31,3 +31,4 @@ bind-key k select-pane -U
 bind-key j select-pane -D
 bind-key h select-pane -L
 bind-key l select-pane -R
+bind-key C-s last-window
