TMUX: Adjusts resizing behaviour

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -32,3 +32,6 @@ bind-key j select-pane -D
 bind-key h select-pane -L
 bind-key l select-pane -R
 bind-key C-s last-window
+
+# Only resize window if another client is actively viewing
+setw -g aggressive-resize on
