--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -8,6 +8,7 @@ set -g mouse-select-pane on
 set -g xterm-keys on
 
 # Status bar stuff
+set-option -g status-utf8 on
 set -g status-bg black
 set -g status-fg white
 set -g status-left "#[fg=green]#H"
