--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -11,8 +11,10 @@ set -g xterm-keys on
 set-option -g status-utf8 on
 set -g status-bg black
 set -g status-fg white
-set -g status-left "#[fg=green]#H"
-#set -g status-right "#[fg=yellow]#(uptime | cut -d ',' -f 2-)"
+set -g status-left-length 15
+set -g status-left " #[fg=cyan,bright]#10H#[fg=green]:#[fg=white]#S#[fg=green] | #[default]"
+set -g status-right '| #[fg=yellow]%y-%m-%d %H:%M '
+set -g status-justify centre
 
 # Highlight active window
 set-window-option -g window-status-current-bg red
