TMUX: Increases responsiveness

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -38,3 +38,6 @@ bind-key C-s last-window
 
 # Only resize window if another client is actively viewing
 setw -g aggressive-resize on
+
+# Make the tmux response time much quicker
+set -sg escape-time 1
