TMUX: Adds config file reaload binding

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -41,3 +41,6 @@ setw -g aggressive-resize on
 
 # Make the tmux response time much quicker
 set -sg escape-time 1
+
+# config file realoding
+bind r source-file ~/.tmux.conf \; display "Reloaded!"
