--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -34,6 +34,10 @@ bind-key k select-pane -U
 bind-key j select-pane -D
 bind-key h select-pane -L
 bind-key l select-pane -R
+bind-key -r K resize-pane -U 5
+bind-key -r J resize-pane -D 5
+bind-key -r H resize-pane -L 5
+bind-key -r L resize-pane -R 5
 bind-key C-s last-window
 
 # Only resize window if another client is actively viewing
