TMUX: Enables mouse resizing

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -5,6 +5,7 @@ set -g default-terminal "screen-256color"
 set -g bell-action none
 set -g mode-mouse on
 set -g mouse-select-pane on
+set -g mouse-resize-pane on
 set -g xterm-keys on
 
 # Status bar stuff
