--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -49,3 +49,8 @@ set -sg escape-time 1
 
 # config file realoding
 bind r source-file ~/.tmux.conf \; display "Reloaded!"
+
+# Change status line colours
+set -g message-fg white
+set -g message-bg black
+set -g message-attr bright
