--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -17,6 +17,9 @@ set -g status-left " #[fg=cyan,bright]#10H#[fg=green]:#[fg=white]#S#[fg=green] |
 set -g status-right '| #[fg=yellow]%y-%m-%d %H:%M '
 set -g status-justify centre
 
+# Decrease status bar update time
+set -g status-interval 60
+
 # Highlight active window
 set-window-option -g window-status-current-bg red
 
