TMUX: Monitors for shell activity

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -57,3 +57,7 @@ bind r source-file ~/.tmux.conf \; display "Reloaded!"
 set -g message-fg white
 set -g message-bg black
 set -g message-attr bright
+
+# Window activity
+setw -g monitor-activity on
+set -g visual-activity on
