--- a/.gitmodules
+++ b/.gitmodules
@@ -64,3 +64,6 @@
 [submodule "vim/vim/bundle/NrrwRgn"]
 	path = vim/vim/bundle/NrrwRgn
 	url = git://github.com/chrisbra/NrrwRgn.git
+[submodule "vim/vim/bundle/simple-pairs"]
+	path = vim/vim/bundle/simple-pairs
+	url = git://github.com/vim-scripts/simple-pairs.git
