--- a/.gitmodules
+++ b/.gitmodules
@@ -67,3 +67,6 @@
 [submodule "vim/vim/bundle/simple-pairs"]
 	path = vim/vim/bundle/simple-pairs
 	url = git://github.com/vim-scripts/simple-pairs.git
+[submodule "vim/vim/bundle/tagbar"]
+	path = vim/vim/bundle/tagbar
+	url = git://github.com/majutsushi/tagbar.git
