--- a/.gitmodules
+++ b/.gitmodules
@@ -64,3 +64,6 @@
 [submodule "vim/vim/bundle/tagbar"]
 	path = vim/vim/bundle/tagbar
 	url = git://github.com/majutsushi/tagbar.git
+[submodule "vim/vim/bundle/jade"]
+	path = vim/vim/bundle/jade
+	url = git://github.com/digitaltoad/vim-jade.git
