--- a/.gitmodules
+++ b/.gitmodules
@@ -67,3 +67,6 @@
 [submodule "vim/vim/bundle/jade"]
 	path = vim/vim/bundle/jade
 	url = git://github.com/digitaltoad/vim-jade.git
+[submodule "vim/vim/bundle/align"]
+	path = vim/vim/bundle/align
+	url = git://github.com/vim-scripts/Align.git
