--- a/.gitmodules
+++ b/.gitmodules
@@ -52,3 +52,6 @@
 [submodule "vim/vim/bundle/indent-guides"]
 	path = vim/vim/bundle/indent-guides
 	url = git://github.com/nathanaelkane/vim-indent-guides.git
+[submodule "vim/vim/bundle/markmultiple"]
+	path = vim/vim/bundle/markmultiple
+	url = git://github.com/adinapoli/vim-markmultiple.git
