--- a/.gitmodules
+++ b/.gitmodules
@@ -55,3 +55,6 @@
 [submodule "vim/vim/bundle/markmultiple"]
 	path = vim/vim/bundle/markmultiple
 	url = git://github.com/adinapoli/vim-markmultiple.git
+[submodule "vim/vim/bundle/khuno.vim"]
+	path = vim/vim/bundle/khuno.vim
+	url = git://github.com/alfredodeza/khuno.vim.git
