--- a/.gitmodules
+++ b/.gitmodules
@@ -58,3 +58,6 @@
 [submodule "vim/vim/bundle/khuno.vim"]
 	path = vim/vim/bundle/khuno.vim
 	url = git://github.com/alfredodeza/khuno.vim.git
+[submodule "vim/vim/bundle/vim-latex"]
+	path = vim/vim/bundle/vim-latex
+	url = git://github.com/vim-scripts/LaTeX-Suite-aka-Vim-LaTeX.git
