--- a/.gitmodules
+++ b/.gitmodules
@@ -58,3 +58,6 @@
 [submodule "vim/vim/bundle/solarized"]
 	path = vim/vim/bundle/solarized
 	url = git://github.com/altercation/vim-colors-solarized.git
+[submodule "vim/vim/bundle/virtualenv"]
+	path = vim/vim/bundle/virtualenv
+	url = git://github.com/jmcantrell/vim-virtualenv.git
