--- a/.gitmodules
+++ b/.gitmodules
@@ -64,3 +64,6 @@
 [submodule "vim/vim/bundle/vimux"]
 	path = vim/vim/bundle/vimux
 	url = git://github.com/benmills/vimux.git
+[submodule "vim/vim/bundle/coffeescript-vim"]
+	path = vim/vim/bundle/coffeescript-vim
+	url = git://github.com/kchmck/vim-coffee-script.git
