--- a/.gitmodules
+++ b/.gitmodules
@@ -86,3 +86,6 @@
 	path = vim/vim/bundle/coffeescript-vim
 	url = git://github.com/kchmck/vim-coffee-script.git
     ignore = dirty
+[submodule "vim/vim/bundle/vim-seek"]
+	path = vim/vim/bundle/vim-seek
+	url = git://github.com/goldfeld/vim-seek.git
