Initialises the repository

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,4 @@ ipython/ipython/profile_default/history.sqlite
 matplotlib/matplotlib/fontList.cache
 ipython/ipython/history
 vim/vim/spell
+vim/vim/bundle
