--- a/ghc/ghc/ghci.conf
+++ b/ghc/ghc/ghci.conf
@@ -1,1 +1,5 @@
 :set prompt "λ: "
+
+-- enable searching hoogle from ghci
+:def hoogle \x -> return $ ":!hoogle --color \"" ++ x ++ "\""
+:def doc \x -> return $ ":!hoogle --info --color \"" ++ x ++ "\""
