--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,4 @@ ipython/ipython/profile_default/db/
 ipython/ipython/profile_default/log/
 ipython/ipython/profile_default/pid/
 ipython/ipython/profile_default/security/
+pip/pip/pip.log
