--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -6,6 +6,12 @@ set -g mouse-select-pane on
 set -g mouse-resize-pane on
 set -g xterm-keys on
 
+# renumber windows sequentially after closing any of them
+set -g renumber-windows on
+
+# start window numbers at 1 to match keyboard order with tmux window order
+set -g base-index 1
+
 # Status bar stuff
 set-option -g status-utf8 on
 set -g status-bg black
