--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -14,11 +14,13 @@ set -g base-index 1
 
 # Status bar stuff
 set-option -g status-utf8 on
-set -g status-bg black
-set -g status-fg white
+set -g status-bg '#666666'
+set -g status-fg '#aaaaaa'
 set -g status-left-length 200
-set -g status-left " #[fg=cyan,bright]#10H#[fg=green]:#[fg=white]#S#[fg=green] | #[default]"
-set -g status-right '| #[fg=yellow]%y-%m-%d %H:%M '
+
+# Remove the visual clutter
+set -g status-left ''
+set -g status-right ''
 set -g status-justify centre
 
 # Decrease status bar update time
