Ignores ipython db subdir

--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,4 @@ ipython/ipython/profile_default/log/
 ipython/ipython/profile_default/pid/
 ipython/ipython/profile_default/security/
 pip/pip/pip.log
+ipython/ipython/db
