Ignores elpa directory in emacs

--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,4 @@ ipython/ipython/profile_default/pid/
 ipython/ipython/profile_default/security/
 pip/pip/pip.log
 ipython/ipython/db
+emacs/emacs.d/elpa
