--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -17,11 +17,11 @@ set-option -g status-utf8 on
 set -g status-bg '#666666'
 set -g status-fg '#aaaaaa'
 set -g status-left-length 200
+set -g status-right "#(battery)"
 
 # Remove the visual clutter
 set -g status-left ''
-set -g status-right ''
-set -g status-justify centre
+# set -g status-justify centre
 
 # Decrease status bar update time
 set -g status-interval 60
