--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -63,3 +63,6 @@ set -g message-attr bright
 # Window activity
 setw -g monitor-activity on
 set -g visual-activity on
+
+# OSX specific config
+if-shell 'test "$(uname)" = "Darwin"' 'source ~/.tmux-osx.conf'
