Centre justifying tmux again

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -21,7 +21,7 @@ set -g status-right "#(battery)"
 
 # Remove the visual clutter
 set -g status-left ''
-# set -g status-justify centre
+set -g status-justify centre
 
 # Decrease status bar update time
 set -g status-interval 120
