--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -5,6 +5,7 @@ set -g mode-mouse off
 set -g mouse-select-pane on
 set -g mouse-resize-pane on
 set -g xterm-keys on
+set-option -g status-position top
 
 # renumber windows sequentially after closing any of them
 set -g renumber-windows on
