Sets automatic window renaming

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -32,6 +32,9 @@ set-window-option -g window-status-current-bg red
 # Vi mode
 set-window-option -g mode-keys vi
 
+# auto window rename
+set-window-option -g automatic-rename
+
 # Key bindings
 unbind %
 bind | split-window -h
