Using new tmux colour scheme
it matches my grb-like theme better

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -70,4 +70,4 @@ set -g visual-activity on
 # OSX specific config
 if-shell 'test "$(uname)" = "Darwin"' 'source ~/.tmux.d/tmux-osx.conf'
 
-source ~/.tmux.d/tmuxcolors-solarized-dark.conf
+source ~/.tmux.d/tmux-color-scheme.conf
