--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,4 @@ emacs/emacs.d/.cask
 zsh/zsh/cache
 ipython/ipython/profile_nbserver/history.sqlite
 *.cache
+ipython/ipython/profile_default/static/*
