Including cython magics in ipython

--- a/.gitignore
+++ b/.gitignore
@@ -23,3 +23,4 @@ zsh/zsh/cache
 ipython/ipython/profile_nbserver/history.sqlite
 *.cache
 ipython/ipython/profile_default/static/*
+ipython/ipython/cython/*
