--- a/tmux/tmux.d/tmux-color-scheme.conf
+++ b/tmux/tmux.d/tmux-color-scheme.conf
@@ -1,12 +1,1 @@
-set  -g status-bg colour11
-set  -g status-fg colour15
-set  -g status-left "#S"
-set  -g status-left-bg colour8
-set  -g status-left-fg colour12
-set  -g status-right "#T"
-set  -g status-right-length 50
-setw -g window-status-format " #I #W#[fg=colour8]#F "
-setw -g window-status-current-format " #I #W#[fg=colour11]#F "
-setw -g window-status-current-attr none
-setw -g window-status-current-bg colour0
-setw -g window-status-current-fg colour2
+source ~/.tmux.d/tmuxcolors-solarized-dark.conf
