Making vim understand the tmux config filetype

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -68,3 +68,5 @@ set -g visual-activity on
 if-shell 'test "$(uname)" = "Darwin"' 'source ~/.tmux.d/tmux-osx.conf'
 
 source ~/.tmux.d/tmux-color-scheme.conf
+
+# vim: ft=sh
