Makes active window stand out with GRB colour scheme

--- a/tmux/tmux.d/tmux-color-scheme.conf
+++ b/tmux/tmux.d/tmux-color-scheme.conf
@@ -9,7 +9,7 @@ set-window-option -g window-status-attr dim
 
 # Active window
 set-window-option -g window-status-current-bg black
-set-window-option -g window-status-current-fg brightyellow
+set-window-option -g window-status-current-fg brightred
 set-window-option -g window-status-attr dim
 
 # Pane borders
