enables mouse pane switching in tmux

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -1,7 +1,7 @@
 set -g prefix C-s
 set -g default-terminal "screen-256color"
 set -g bell-action none
-set -g mode-mouse off
+set -g mouse-select-pane on
 set -g xterm-keys on
 set -g default-command "exec zsh"
 
