Adds c-k mapping also

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -72,8 +72,9 @@ bind -n C-k run "(tmux display-message -p '#{pane_current_command}' | grep -iqE 
 bind -n C-l run "(tmux display-message -p '#{pane_current_command}' | grep -iqE '(^|\/)g?(view|vim?)(diff)?$' && tmux send-keys C-l) || tmux select-pane -R"
 bind -n C-\ run "(tmux display-message -p '#{pane_current_command}' | grep -iqE '(^|\/)g?(view|vim?)(diff)?$' && tmux send-keys 'C-\\') || tmux select-pane -l"
 
-# Re-enable clear screen but with prefix
+# Re-enable clear screen but with prefix, and kill to end of line
 bind C-l send-keys 'C-l'
+bind C-k send-keys 'C-k'
 
 
 # OSX specific config
