--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -8,8 +8,8 @@ set -g default-command "exec zsh"
 # renumber windows sequentially after closing any of them
 set -g renumber-windows on
 
-# Proper programmers count from 0
-set -g base-index 0
+# start window numbers at 1 to match keyboard order with tmux window order
+set -g base-index 1
 
 # Status bar stuff
 set-option -g status-utf8 on
