--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -1,7 +1,4 @@
-unbind C-b
-set -g prefix C-Space
-bind Space send-prefix
-
+set -g prefix C-s
 set -g default-terminal "screen-256color"
 set -g bell-action none
 set -g mode-mouse off
@@ -49,8 +46,6 @@ bind-key -r J resize-pane -D 5
 bind-key -r H resize-pane -L 5
 bind-key -r L resize-pane -R 5
 bind-key C-s last-window
-bind Space copy-mode
-bind C-Space copy-mode
 
 # Only resize window if another client is actively viewing
 setw -g aggressive-resize on
