--- a/tmux/tmux.d/tmux-color-scheme.conf
+++ b/tmux/tmux.d/tmux-color-scheme.conf
@@ -1,19 +1,1 @@
-# Default colours
-set-option -g status-bg black
-set-option -g status-fg yellow
-
-# Non-active window
-set-window-option -g window-status-bg black
-set-window-option -g window-status-fg yellow
-set-window-option -g window-status-attr dim
-
-# Active window
-set-window-option -g window-status-current-bg black
-set-window-option -g window-status-current-fg brightred
-set-window-option -g window-status-attr dim
-
-# Pane borders
-set-option -g pane-border-fg black
-set-option -g pane-border-bg black
-set-option -g pane-active-border-fg brightyellow
-set-option -g pane-active-border-bg black
+source ~/.tmux.d/tmuxcolours-solarized-dark.conf
