--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -10,6 +10,7 @@ set -g renumber-windows on
 
 # start window numbers at 1 to match keyboard order with tmux window order
 set -g base-index 1
+set-window-option -g pane-base-index 1
 
 # Status bar stuff
 set-option -g status-utf8 on
