--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -17,7 +17,7 @@ set-option -g status-utf8 on
 set -g status-left-length 200
 
 # Remove the visual clutter
-set -g status-justify centre
+set -g status-justify right
 
 # Decrease status bar update time
 set -g status-interval 1
