Move window list to left and session name to right

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -14,10 +14,11 @@ set-window-option -g pane-base-index 1
 
 # Status bar stuff
 set-option -g status-utf8 on
-set -g status-left-length 200
 
 # Remove the visual clutter
-set -g status-justify right
+set -g status-justify left
+set -g status-left
+set -g status-right "[#{session_name}]"
 
 # Decrease status bar update time
 set -g status-interval 1
