Spell colour correctly

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -68,6 +68,6 @@ bind -n C-\ if-shell "$is_vim" "send-keys C-\\" "select-pane -l"
 bind C-l send-keys 'C-l'
 bind C-k send-keys 'C-k'
 
-source ~/.tmux.d/tmux-color-scheme.conf
+source ~/.tmux.d/tmux-colour-scheme.conf
 
 # vim: ft=sh
