--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -17,7 +17,7 @@ set-option -g status-utf8 on
 
 # Remove the visual clutter
 set -g status-justify left
-set -g status-left
+set -g status-left ""
 set -g status-right "[#{session_name}]"
 
 # Decrease status bar update time
