Use reattatch-to-user-namespace with tmux

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -1,3 +1,6 @@
+# OSX specific stuff
+if-shell "uname | grep -q Darwin" "source-file ~/.tmux.d/tmux-osx.conf"
+
 set -g prefix C-s
 set -g default-terminal "screen-256color"
 set -g bell-action none
