--- a/tmux/tmux.d/tmux-osx.conf
+++ b/tmux/tmux.d/tmux-osx.conf
@@ -1,1 +1,3 @@
-set-option -g default-command "reattach-to-user-namespace -l zsh"
+# Update default binding of 'Enter' to use copy-pipe
+unbind -t vi-copy Enter
+bind-key -t vi-copy Enter copy-pipe "reattach-to-user-namespace pbcopy"
