--- a/tmux/tmux.d/tmux-colour-scheme.conf
+++ b/tmux/tmux.d/tmux-colour-scheme.conf
@@ -1,1 +1,24 @@
-source ~/.tmux.d/tmux-colour-schemes/tmuxcolors-light.conf
+# Default colours
+set-option -g status-bg '#000000'
+set-option -g status-fg yellow
+
+# Non-active window
+set-window-option -g window-status-bg '#000000'
+set-window-option -g window-status-fg white
+set-window-option -g window-status-attr dim
+
+# Active window
+set-window-option -g window-status-current-bg '#000000'
+set-window-option -g window-status-current-fg yellow
+
+# Pane borders
+set-option -g pane-border-fg '#000000'
+set-option -g pane-border-bg '#000000'
+set-option -g pane-active-border-fg brightyellow
+set-option -g pane-active-border-bg '#000000'
+
+# Change status line colours
+set -g message-fg white
+set -g message-bg '#000000'
+set -g message-attr bright
+
