--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "zsh/zsh/syntax-highlighting"]
 	path = zsh/zsh/syntax-highlighting
 	url = https://github.com/zsh-users/zsh-syntax-highlighting
+[submodule "tmux/tmux.d/tmux-powerline"]
+	path = tmux/tmux.d/tmux-powerline
+	url = https://github.com/erikw/tmux-powerline
