--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -19,6 +19,8 @@ set-option -g status-utf8 on
 set -g status-justify left
 set -g status-left ""
 set -g status-right "[#{session_name}]"
+set-window-option -g window-status-current-format "[#I:#W#F]"
+set-window-option -g window-status-format "#I:#W#F"
 
 # Decrease status bar update time
 set -g status-interval 1
