Add pylab profile

--- a/.gitignore
+++ b/.gitignore
@@ -7,13 +7,12 @@ vim/vim/bundle
 ghc/ghc/ghci_history
 ghc/ghc/x86_64-*
 vim/vim/haskellmode.config
-ipython/ipython/profile_default/history.sqlite
-ipython/ipython/profile_default/db/
-ipython/ipython/profile_default/log/
-ipython/ipython/profile_default/pid/
-ipython/ipython/profile_default/security/
+ipython/ipython/profile_default/*
+!ipython/ipython/profile_default/ipython_config.py
 ipython/ipython/profile_nbserver/*
 !ipython/ipython/profile_nbserver/ipython_config.py
+ipython/ipython/profile_pylab/*
+!ipython/ipython/profile_pylab/ipython_config.py
 pip/pip/pip.log
 ipython/ipython/db
 emacs/emacs.d/elpa
