--- a/.gitignore
+++ b/.gitignore
@@ -1,30 +1,15 @@
-ipython/ipython/profile_default/history.sqlite
 matplotlib/matplotlib/fontList.cache
-ipython/ipython/history
 vim/vim/spell
 vim/vim/bundle
 *.swp
 ghc/ghc/ghci_history
 ghc/ghc/x86_64-*
 vim/vim/haskellmode.config
-ipython/ipython/profile_default/*
-!ipython/ipython/profile_default/ipython_config.py
-ipython/ipython/profile_nbserver/*
-!ipython/ipython/profile_nbserver/ipython_config.py
-ipython/ipython/profile_pylab/*
-!ipython/ipython/profile_pylab/ipython_config.py
-!ipython/ipython/profile_pylab/startup
-ipython/ipython/profile_pylab/startup/README
-!ipython/ipython/profile_pylab/startup/00-with-seaborn.py
 pip/pip/pip.log
-ipython/ipython/db
 emacs/emacs.d/elpa
 vim/vim/vim-addons
 zsh/zsh/cache
-ipython/ipython/profile_nbserver/history.sqlite
 *.cache
-ipython/ipython/profile_default/static/*
-ipython/ipython/cython/*
 emacs/emacs.d/auto-save-list/*
 emacs/emacs.d/backups/*
 emacs/!emacs.d/backups/.gitkeep
@@ -76,13 +61,52 @@ emacs/emacs.d/*
 !emacs/emacs.d/init.el
 *.DS_Store
 .bundle
-ipython/ipython/extensions/*
 venv
 mutt/mutt.d/authentication.mutt
 mutt/mutt.d/passwords.gpg
 mutt/mutt.d/headers
 mutt/mutt.d/aliases.txt
-ipython/ipython/profile_sh/db/
-ipython/ipython/profile_sh/history.sqlite
+
+# IPython - profile default
+# Keep static files
+!ipython/ipython/profile_default/static/custom/custom.css
+!ipython/ipython/profile_default/static/custom/custom.js
+# Keep startup files
+!ipython/ipython/profile_default/startup
+# Ignore the rest
+ipython/ipython/profile_default/startup/README
+ipython/ipython/profile_default/security
+ipython/ipython/profile_default/history.sqlite
+
+# IPython - profile nbserver
+# Keep static files
+!ipython/ipython/profile_nbserver/static/custom/custom.css
+!ipython/ipython/profile_nbserver/static/custom/custom.js
+# Keep startup files
+!ipython/ipython/profile_nbserver/startup
+# Ignore the rest
+ipython/ipython/profile_nbserver/startup/README
+ipython/ipython/profile_nbserver/security
+ipython/ipython/profile_nbserver/history.sqlite
+
+# IPython - profile pylab
+# Keep static files
+!ipython/ipython/profile_pylab/static/custom/custom.css
+!ipython/ipython/profile_pylab/static/custom/custom.js
+# Keep startup files
+!ipython/ipython/profile_pylab/startup
+# Ignore the rest
+ipython/ipython/profile_pylab/startup/README
+ipython/ipython/profile_pylab/security
+ipython/ipython/profile_pylab/history.sqlite
+
+# IPython - profile sh
+# Keep static files
+!ipython/ipython/profile_sh/static/custom/custom.css
+!ipython/ipython/profile_sh/static/custom/custom.js
+# Keep startup files
+!ipython/ipython/profile_sh/startup
+# Ignore the rest
 ipython/ipython/profile_sh/startup/README
-ipython/ipython/profile_sh/static/
+ipython/ipython/profile_sh/security
+ipython/ipython/profile_sh/history.sqlite
