Revert "Remove gnu brew packages"
This reverts commit e8bf349e8bbad587d989a2fd1d4953c7786ff47f.

--- a/site.yml
+++ b/site.yml
@@ -35,10 +35,12 @@
       - graphviz
       - tmux
       - md5sha1sum
+      - coreutils
       - freetype
       - watch
       - the_silver_searcher
       - wget
+      - gawk
       - dos2unix
       - ssh-copy-id
       - nmap
