--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "tmux/tmux.d/tmux-powerline"]
 	path = tmux/tmux.d/tmux-powerline
 	url = https://github.com/erikw/tmux-powerline
+[submodule "external/git-stree"]
+	path = external/git-stree
+	url = https://github.com/tdd/git-stree
