--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -1,5 +1,5 @@
 set -g prefix C-s
-set -g default-terminal "xterm-256color"
+set -g default-terminal "screen-256color"
 set -g bell-action none
 set -g mode-mouse off
 set -g xterm-keys on
@@ -8,18 +8,22 @@ set -g default-command "exec zsh"
 # renumber windows sequentially after closing any of them
 set -g renumber-windows on
 
-# Status bar
-set-option -g status-justify "centre"
-set-option -g status-left ""
-set-option -g status-right ""
-set-option -g status-left-length "0"
-set-option -g status-right-length "0"
+# start window numbers at 1 to match keyboard order with tmux window order
+set -g base-index 1
+set-window-option -g pane-base-index 1
 
-# Colors
-set -g status-bg "yellow"
-set -g status-fg "black"
-set -g pane-border-fg "yellow"
-set -g pane-active-border-fg "yellow"
+# Status bar stuff
+set-option -g status-utf8 on
+
+# Remove the visual clutter
+set -g status-justify left
+set -g status-left ""
+set -g status-right "[#{session_name}]"
+set-window-option -g window-status-current-format "[#I:#W#F]"
+set-window-option -g window-status-format "#I:#W#F"
+
+# Decrease status bar update time
+set -g status-interval 1
 
 # Vi mode
 set-window-option -g mode-keys vi
@@ -68,5 +72,8 @@ bind C-k send-keys 'C-k'
 
 # OSX specific stuff
 if-shell "uname | grep -q Darwin" "source-file ~/.tmux.d/tmux-osx.conf"
+
+
+source ~/.tmux.d/tmux-colour-scheme.conf
 
 # vim: ft=sh
