Clean up tmux session

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -8,28 +8,18 @@ set -g default-command "exec zsh"
 # renumber windows sequentially after closing any of them
 set -g renumber-windows on
 
-# start window numbers at 1 to match keyboard order with tmux window order
-set -g base-index 1
-set-window-option -g pane-base-index 1
-
 # Status bar stuff
 set-option -g status-utf8 on
 
 # Remove the visual clutter
-set -g status-justify left
+set -g status-justify centre
 set -g status-left ""
-set -g status-right "[#{session_name}]"
-set-window-option -g window-status-current-format "[#I:#W#F]"
-set-window-option -g window-status-format "#I:#W#F"
-
-# Decrease status bar update time
-set -g status-interval 1
+set -g status-right ""
+set-window-option -g window-status-current-format "#W"
+set-window-option -g window-status-format "#W"
 
 # Vi mode
 set-window-option -g mode-keys vi
-
-# auto window rename
-set-window-option -g automatic-rename
 
 # Key bindings
 unbind %
