--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -15,8 +15,8 @@ set-option -g status-utf8 on
 set -g status-justify centre
 set -g status-left ""
 set -g status-right ""
-set-window-option -g window-status-current-format "#W"
-set-window-option -g window-status-format "#W"
+set-window-option -g window-status-current-format "#W#F"
+set-window-option -g window-status-format "#W#F"
 
 # Vi mode
 set-window-option -g mode-keys vi
