Ignore lots of new ipython profile stuff

--- a/.gitignore
+++ b/.gitignore
@@ -85,3 +85,5 @@ ipython/ipython/profile_*/db
 ipython/ipython/profile_*/log
 ipython/ipython/profile_*/pid
 ipython/ipython/nbextensions/*
+ipython/ipython/kernels
+ipython/ipython/profile_default/nbconfig
