--- a/.gitignore
+++ b/.gitignore
@@ -93,3 +93,4 @@ emacs/emacs.d/.sx/
 emacs/emacs.d/SessionDesktop.el
 emacs/emacs.d/ac-comphist.dat
 emacs/emacs.d/el-get/
+vim/vim/autoload/plug.vim.old
