--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -7,6 +7,8 @@ set -g default-command "exec zsh"
 
 # renumber windows sequentially after closing any of them
 set -g renumber-windows on
+set -g base-index 1
+set -g pane-base-index 1
 
 # Status bar stuff
 set-option -g status-utf8 on
