--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -68,4 +68,7 @@ if-shell "uname | grep -q Darwin" "source-file ~/.tmux.d/tmux-osx.conf"
 
 source ~/.tmux.d/tmux-colour-scheme.conf
 
+# Tmux sensible
+run-shell ~/dotfiles/external/tmux-sensible/sensible.tmux
+
 # vim: ft=sh
