Add shortcut for starting chrome

--- a/i3/i3/config
+++ b/i3/i3/config
@@ -23,6 +23,9 @@ floating_modifier $mod
 # start a terminal
 bindsym $mod+Return exec i3-sensible-terminal
 
+# start chrome
+bindsym $mod+c exec chromium
+
 # kill focused window
 bindsym $mod+Shift+Q kill
 
