--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -9,6 +9,9 @@ set -g renumber-windows on
 set -g base-index 1
 set -g pane-base-index 1
 
+# Increase the scrollback history
+set-option -g history-limit 10000
+
 # Status bar stuff
 set-option -g status-utf8 on
 
