Remove window borders from i3

--- a/i3/i3/config
+++ b/i3/i3/config
@@ -17,6 +17,9 @@ exec_always xmodmap ~/.xmodmap
 # font for window titles. ISO 10646 = Unicode
 font -misc-fixed-medium-r-normal--13-120-75-75-C-70-iso10646-1
 
+# Set the window borders small
+new_window 1pixel
+
 # Use Mouse+$mod to drag floating windows to their wanted position
 floating_modifier $mod
 
