Update development location to ~/dev

--- a/site.yml
+++ b/site.yml
@@ -10,7 +10,7 @@
   - name: Create project directories
     file: path={{ item }} state=directory
     with_items:
-      - "{{ home }}/Development/Forks"
+      - "{{ home }}/dev/forks"
       - "{{ home }}/work/WASP"
       - "{{ home }}/work/NGTS"
 
