--- a/site.yml
+++ b/site.yml
@@ -31,6 +31,7 @@
     homebrew: name={{ item }} state=present
     with_items:
       - git
+      - git-lfs
       - zsh
       - htop-osx
       - gcc
