--- a/.gitmodules
+++ b/.gitmodules
@@ -10,3 +10,6 @@
 [submodule "external/tmux-sensible"]
 	path = external/tmux-sensible
 	url = https://github.com/tmux-plugins/tmux-sensible
+[submodule "external/conda-zsh-completion"]
+	path = external/conda-zsh-completion
+	url = https://github.com/esc/conda-zsh-completion
