--- a/site.yml
+++ b/site.yml
@@ -13,7 +13,11 @@
       - "{{ home }}/dev/forks"
       - "{{ home }}/work/WASP"
       - "{{ home }}/work/NGTS"
-      - "{{ home }}/var/log"
+      - "{{ home }}/Library/Logs/custom"
+      - "{{ home }}/var"
+
+  - name: Ensure log dir link is created
+    file: path={{ home }}/var/log state=link src={{ home }}/Library/Logs/custom
 
   - name: Install dotfiles
     command: rake install
