--- a/i3/i3/config
+++ b/i3/i3/config
@@ -89,7 +89,7 @@ bindsym $mod+a focus parent
 # switch to workspace
 bindsym $mod+1 workspace 1:jobs
 bindsym $mod+2 workspace 2:ngts
-bindsym $mod+3 workspace 3
+bindsym $mod+3 workspace 3:logs
 bindsym $mod+4 workspace 4
 bindsym $mod+5 workspace 5
 bindsym $mod+6 workspace 6
