--- a/i3/i3/config
+++ b/i3/i3/config
@@ -87,9 +87,9 @@ bindsym $mod+a focus parent
 #bindcode $mod+d focus child
 
 # switch to workspace
-bindsym $mod+1 workspace 1:jobs
-bindsym $mod+2 workspace 2:ngts
-bindsym $mod+3 workspace 3:logs
+bindsym $mod+1 workspace 1
+bindsym $mod+2 workspace 2
+bindsym $mod+3 workspace 3
 bindsym $mod+4 workspace 4
 bindsym $mod+5 workspace 5
 bindsym $mod+6 workspace 6
