Adding tmux plugin list

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -73,4 +73,12 @@ source ~/.tmux.d/tmux-colour-scheme.conf
 # Tmux sensible
 run-shell ~/dotfiles/external/tmux-sensible/sensible.tmux
 
+# tmux plugin manager
+set -g @tpm_plugins '           \
+    tmux-plugins/tpm            \
+    tmux-plugins/tmux-resurrect \
+    '
+
+run-shell '~/.tmux/plugins/tpm/tpm'
+
 # vim: ft=sh
