Add tmux continuum plugin

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -77,6 +77,7 @@ run-shell ~/dotfiles/external/tmux-sensible/sensible.tmux
 set -g @tpm_plugins '           \
     tmux-plugins/tpm            \
     tmux-plugins/tmux-resurrect \
+    tmux-plugins/tmux-continuum \
     '
 
 run-shell '~/.tmux/plugins/tpm/tpm'
