Set coninuum restore on

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -82,4 +82,7 @@ set -g @tpm_plugins '           \
 
 run-shell '~/.tmux/plugins/tpm/tpm'
 
+# Tmux continuum
+set -g @continuum-restore 'on'
+
 # vim: ft=sh
