--- a/.gitignore
+++ b/.gitignore
@@ -53,9 +53,16 @@ tramp
 emacs/emacs.d/url
 emacs/emacs.d/eshell/*
 vim/vim/tmp/*
+!vim/vim/tmp/undo
+!vim/vim/tmp/backup
+!vim/vim/tmp/swap
 vim/vim/tmp/undo/*
+vim/vim/tmp/backup/*
+vim/vim/tmp/swap/*
 !vim/vim/tmp/.gitkeep
 !vim/vim/tmp/undo/.gitkeep
+!vim/vim/tmp/backup/.gitkeep
+!vim/vim/tmp/swap/.gitkeep
 *.pyc
 emacs/emacs.d/.emacs.d
 !emacs/emacs.d/config/*.el
@@ -67,8 +74,6 @@ mutt/mutt.d/authentication.mutt
 mutt/mutt.d/passwords.gpg
 mutt/mutt.d/headers
 mutt/mutt.d/aliases.txt
-vim/vim/tmp/*
-!vim/vim/tmp/.gitkeep
 
 ipython/ipython/extensions
 ipython/ipython/cython
