--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -80,6 +80,7 @@ set -g @tpm_plugins '           \
     tmux-plugins/tmux-continuum \
     '
 
+set -g @resurrect-save 'W'
 run-shell '~/.tmux/plugins/tpm/tpm'
 
 # Tmux continuum
