Make tmux theme nicer

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -16,7 +16,7 @@ set-option -g history-limit 10000
 set-option -g status-utf8 on
 
 # Remove the visual clutter
-set -g status-justify left
+set -g status-justify centre
 set -g status-left ""
 set -g status-right ""
 set-window-option -g window-status-current-format "#W#F"
