--- a/tmux/tmux.d/tmux-colour-scheme.conf
+++ b/tmux/tmux.d/tmux-colour-scheme.conf
@@ -1,1 +1,8 @@
 source ~/.tmux.d/colourschemes/ir_black.conf
+
+# Customise theme further
+# Set everything to black!
+set-option -g status-bg '#000000'
+set-window-option -g window-status-bg '#000000'
+set-window-option -g window-status-current-bg '#000000'
+set -g message-bg '#000000'
