Add override for tmux colour scheme

--- a/tmux/tmux.d/tmux-colour-scheme.conf
+++ b/tmux/tmux.d/tmux-colour-scheme.conf
@@ -1,8 +1,10 @@
 source ~/.tmux.d/colourschemes/ir_black.conf
 
+BG='#222222'
+
 # Customise theme further
 # Set everything to black!
-set-option -g status-bg '#000000'
-set-window-option -g window-status-bg '#000000'
-set-window-option -g window-status-current-bg '#000000'
-set -g message-bg '#000000'
+set-option -g status-bg $BG
+set-window-option -g window-status-bg $BG
+set-window-option -g window-status-current-bg $BG
+set -g message-bg $BG
