Unbind suspend tmux command

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -39,6 +39,9 @@ bind-key -r H resize-pane -L 5
 bind-key -r L resize-pane -R 5
 bind-key C-s last-window
 
+# Disable suspend
+unbind C-z
+
 # Only resize window if another client is actively viewing
 setw -g aggressive-resize on
 
