--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -52,8 +52,8 @@ set -sg escape-time 0
 bind r source-file ~/.tmux.conf \; display "Reloaded!"
 
 # Window activity
-setw -g monitor-activity on
-set -g visual-activity on
+setw -g monitor-activity off
+set -g visual-activity off
 
 # Smart pane switching with awareness of vim splits
 is_vim='echo "#{pane_current_command}" | grep -iqE "(^|\/)g?(view|n?vim?)(diff)?$"'
