Reconfigure tmux theme to be prettier

--- a/tmux/tmux.d/tmux-colour-scheme.conf
+++ b/tmux/tmux.d/tmux-colour-scheme.conf
@@ -1,10 +1,43 @@
-source ~/.tmux.d/colourschemes/ir_black.conf
+tm_color_active=colour213
+tm_color_inactive=colour241
+tm_color_feature=colour4
+tm_color_background='#222222'
 
-BG='#222222'
+tm_session_name="#[fg=$tm_color_feature,bold]#S"
+tm_host="#[fg=$tm_color_feature,bold]#h"
+tm_date="#[fg=$tm_color_inactive] %R %d %b"
 
-# Customise theme further
-# Set everything to black!
-set-option -g status-bg $BG
-set-window-option -g window-status-bg $BG
-set-window-option -g window-status-current-bg $BG
-set -g message-bg $BG
+set-option -g status-bg '#333333'
+set-option -g status-fg $tm_color_active
+
+# Non-active window
+set-window-option -g window-status-bg '#333333'
+set-window-option -g window-status-fg $tm_color_inactive
+set-window-option -g window-status-attr dim
+
+# Active window
+set-window-option -g window-status-current-bg '#333333'
+set-window-option -g window-status-current-fg $tm_color_active
+
+# Pane borders
+set-option -g pane-border-fg '#333333'
+set-option -g pane-border-bg '#333333'
+set-option -g pane-active-border-fg $tm_color_active
+set-option -g pane-active-border-bg '#333333'
+
+# Change status line colours
+set -g message-fg $tm_color_active
+set -g message-bg '#333333'
+set -g message-attr bright
+
+
+set-option -g status-bg $tm_color_background
+set-window-option -g window-status-bg $tm_color_background
+set-window-option -g window-status-current-bg $tm_color_background
+set -g message-bg $tm_color_background
+set-option -g status-fg $tm_color_active
+set-window-option -g window-status-current-fg $tm_color_active
+
+# Set the status bar
+set -g status-left $tm_session_name
+set -g status-right $tm_date' '$tm_host
