--- a/tmux/tmux.d/tmux-colour-scheme.conf
+++ b/tmux/tmux.d/tmux-colour-scheme.conf
@@ -1,9 +1,11 @@
+# Some settings
+tm_icon="♟"
 tm_color_active=colour213
 tm_color_inactive=colour241
 tm_color_feature=colour4
 tm_color_background='#222222'
 
-tm_session_name="#[fg=$tm_color_feature,bold]#S"
+tm_session_name="#[fg=$tm_color_feature,bold]$tm_icon #S"
 tm_host="#[fg=$tm_color_feature,bold]#h"
 tm_date="#[fg=$tm_color_inactive] %R %d %b"
 
